[package]
name = "alsacoin"
version = "0.1.0"
authors = ["chritchens <chritchens@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/alsacoin/alsacoin"
homepage = "https://github.com/alsacoin/alsacoin"
description = "Rust client for the Alsacoin protocol"
readme = "README.md"
categories = ["cryptography", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "alsacoin/alsacoin", branch = "master" }

[workspace]
members = ["crypto", "store",  "mining", "models", "protocol",  "network", "config", "cli"]

[dependencies]
failure = "~0.1"
serde = { version = "~1.0", features = ["derive"] }
serde_cbor = "~0.10"
serde_json = "~1.0"
clap = { version = "~2", features = ["suggestions", "color", "vec_map", "yaml", "wrap_help"] }

crypto = { path = "crypto" }
mining = { path = "mining" }
store = { path = "store" }
models = { path = "models" }
protocol = { path = "protocol" }
config = { path = "config" }
cli = { path = "cli" }
