[package]
name = "alsacoin"
version = "0.1.0"
authors = ["chritchens <chritchens@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/alsacoin/alsacoin"
homepage = "https://github.com/alsacoin/alsacoin"
description = "Rust client for the Alsacoin protocol"
readme = "README.md"
categories = ["cryptography", "cryptocurrency", "blockchain"]

[badges]
travis-ci = { repository = "alsacoin/alsacoin", branch = "master" }

[workspace]
members = ["crypto", "store",  "mining", "models", "protocol",  "network", "config", "cli"]

[lib]
name = "alsacoin"
path = "src/lib.rs"

[[bin]]
name = "alsad"
path = "bin/alsad.rs"

[[bin]]
name = "alsac"
path = "bin/alsac.rs"

[dependencies]
crypto = { path = "crypto" }
store = { path = "store" }
mining = { path = "mining" }
models = { path = "models" }
protocol = { path = "protocol" }
network = { path = "network" }
config = { path = "config" }
cli = { path = "cli" }
