[package]
name = "cli"
version = "0.1.0"
authors = ["chritchens <chritchens@gmail.com>"]
edition = "2018"

[dependencies]
failure = "~0.1"
enum-display-derive = "~0.1"
serde = { version = "~1.0", features = ["derive"] }
serde_cbor = "~0.10"
serde_json = "~1.0"
clap = { version = "~2", features = ["suggestions", "color", "vec_map", "yaml", "wrap_help"] }
slog = "~2.5"
slog-term = "~2.4"
slog-json = "~2.3"
sloggers = "~0.3"
easy_process = "~0.1"
process_utils = "~0.1"
process_path = "~0.1"
heim = "~0.0"
systemstat = "~0.1"
psutil = "~1.7"

crypto = { path = "../crypto" }
mining = { path = "../mining" }
store = { path = "../store" }
models = { path = "../models" }
network = { path = "../network" }
protocol = { path = "../protocol" }
config = { path = "../config" }
