[package]
name = "cli"
version = "0.1.0"
authors = ["chritchens <chritchens@gmail.com>"]
edition = "2018"

[dependencies]
failure = "~0.1"
enum-display-derive = "~0.1"
serde = { version = "~1.0", features = ["derive"] }
serde_cbor = "~0.10"
serde_json = "~1.0"
clap = { version = "~2", features = ["suggestions", "color", "vec_map", "yaml", "wrap_help"] }

crypto = { path = "../crypto" }
mining = { path = "../mining" }
config = { path = "../config" }
store = { path = "../store" }
models = { path = "../models" }
network = { path = "../network" }
protocol = { path = "../protocol" }
log = { path = "../log" }
