[package]
name = "config"
version = "0.1.0"
authors = ["chritchens <chritchens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "~0.1"
enum-display-derive = "~0.1"
serde = { version = "~1.0", features = ["derive"] }
ed25519-dalek = { version = "=1.0.0-pre.1" }
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }

crypto = { path = "../crypto" }
