[package]
name = "consensus"
version = "0.1.0"
authors = ["chritchens <chritchens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "~0.1"
serde = { version = "~1.0", features = ["derive"] }
serde_cbor = "~0.10"
serde_json = "~1.0"
byteorder = "~1.3"

crypto = { path = "../crypto" }
mining = { path = "../mining" }
store = { path = "../store" }
models = { path = "../models" }
network = { path = "../network" }
config = { path = "../config" }
