[package]
name = "crypto"
version = "0.1.0"
authors = ["chritchens <chritchens@gmail.com>"]
edition = "2018"

[dependencies]
failure = "~0.1"
rand_core = "~0.5"
rand_os = "~0.2"
serde = { version = "~1.0", features = ["derive"] }
ed25519-dalek = { version = "=1.0.0-pre.1" }
byteorder = "~1.3"
typenum = "~1.10"
digest = "~0.8"
blake-hash = "~0.3"
subtle = "~2.1"
curve25519-dalek = "~1.1"
