[package]
name = "log"
version = "0.1.0"
authors = ["chritchens <chritchens@gmail.com>"]
edition = "2018"

[dependencies]
failure = "~0.1"
enum-display-derive = "~0.1"
serde = { version = "~1.0", features = ["derive"] }
serde_cbor = "~0.10"
serde_json = "~1.0"
slog = "~2.5"
slog-term = "~2.4"
slog-json = "~2.3"
sloggers = "~0.3"

config = { path = "../config" }
