[package]
name = "models"
version = "0.1.0"
authors = ["chritchens <chritchens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "~0.1"
serde = { version = "~1.0", features = ["derive"] }
serde_cbor = "~0.10"
serde_json = "~1.0"
chrono = "~0.4"
num = { version = "~0.2", features = ["std", "rand", "serde"] }
regex = "~1.1"
ed25519-dalek = { version = "=1.0.0-pre.1" }
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
may = "~0.3"
generator = "~0.6"
conetty = { git = "https://github.com/Xudong-Huang/conetty" }
may_signal = { git = "https://github.com/Xudong-Huang/may_signal" }
may_process = { git = "https://github.com/Xudong-Huang/may_process" }
may_thread = { git = "https://github.com/Xudong-Huang/may_thread" }
may_rpc = { git = "https://github.com/Xudong-Huang/may_rpc" }

crypto = { path = "../crypto" }
mining = { path = "../mining" }
store = { path = "../store" }
