[package]
name = "store"
version = "0.1.0"
authors = ["chritchens <chritchens@gmail.com>"]
edition = "2018"

[dependencies]
failure = "~0.1"
byteorder = "~1.3"
serde = { version = "~1.0", features = ["derive"] }
serde_cbor = "~0.10"
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
tempfile = "~3.1"
rkv = { version = "=0.9.7", features = ["backtrace"] }
unqlite = "~1.4"

crypto = { path = "../crypto" }
